<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/admin_dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <!-- Header -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <ImageView
            android:id="@+id/back_arrow"
            android:layout_width="35dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_back_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/back_button_description" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/admin_dashboard"
            android:textColor="@android:color/black"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_account_circle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:contentDescription="@string/profile_icon_description" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Divider -->
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/black" />

    <!-- Menu Options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_browse_profiles"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_profiles"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_profiles"
            app:iconTint="@android:color/black"
            app:strokeColor="@android:color/transparent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_browse_events"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_events"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_calender"
            app:iconTint="@android:color/black"
            app:strokeColor="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_browse_images"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/browse_images"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_image"
            app:iconTint="@android:color/black"
            app:strokeColor="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_manage_organizers"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/manage_organizers"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_organizers"
            app:iconTint="@android:color/black"
            app:strokeColor="@android:color/transparent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_review_logs"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/review_logs"
            android:gravity="start|center_vertical"
            android:textColor="@android:color/black"
            app:icon="@drawable/ic_notification"
            app:iconTint="@android:color/black"
            app:strokeColor="@android:color/transparent"/>

    </LinearLayout>

</LinearLayout>
